fixed the admissions and discharges alignment

--- a/Client/src/Styling/AdminDashboard.css
+++ b/Client/src/Styling/AdminDashboard.css
@@ -121,7 +121,7 @@
 }
 
 .card {
-  /* background-color: #102a3e; */
+  background-color: #fff;
   padding: 2rem 2rem;
   border: 1px solid #e0c2c2;
   text-align: start;
